# tablegold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  conftest.py  pyproject.toml
docs/: comparison-semantics.md
examples/: README.md  pipeline_demo.py  test_metrics_pipeline.py
examples/goldens/: daily_metrics.csv
scripts/: smoke.sh
src/tablegold/: __init__.py  __main__.py  cli.py  compare.py  dtypes.py  errors.py  golden.py  pytest_plugin.py  report.py  table.py  tolerance.py
tests/: conftest.py  test_cli.py  test_compare_cells.py  test_compare_schema.py  test_dtypes.py  test_golden.py  test_keys.py  test_pytest_plugin.py  test_readme_example.py  test_report.py  test_table.py  test_tolerance.py
